Fixed scroll on iOS

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -93,4 +93,6 @@ h4 {
 
 .overflow {
   overflow: hidden;
+  position: fixed;
+  width: 100%;
 }
